--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 .pub/
 build/
 coverage/
+test/
 lib/generated_plugin_registrant.dart
 # For library packages, don’t commit the pubspec.lock file.
 # Regenerating the pubspec.lock file lets you test your package against the latest compatible versions of its dependencies.
@@ -54,6 +55,26 @@ lib/generated_plugin_registrant.dart
 **/ios/Flutter/flutter_export_environment.sh
 **/ios/ServiceDefinitions.json
 **/ios/Runner/GeneratedPluginRegistrant.*
+
+# Windows related
+**/windows/*
+**/windows/
+
+# MacOS related
+**/macos/*
+**/macos/
+
+# Web related
+**/web/*
+**/web/
+
+# Linux related
+**/linux/*
+**/linux/
+
+# Build related
+**/build/*
+**/build/
 
 # Exceptions to above rules.
 !**/ios/**/default.mode1v3
